Commit 10 - fixed spacing and errors
removed the inappropriate size attribute and replaced it with a class instead. I also removed some break lines to make the website cleaner.

--- a/A5 - web accessibility/assessment-files/style.css
+++ b/A5 - web accessibility/assessment-files/style.css
@@ -26,7 +26,7 @@ body {
 
 /* || typography */
 
-p[size="7"], p[size="6"], p[size="5"] {
+.size7, .size6, .size5 {
   font-family: 'Sonsie One', cursive;
   color: black;
 }
@@ -36,19 +36,19 @@ p, input, li, table, label {
   color: black;
 }
 
-p[size="7"] {
+.size7 {
   font-size: 4rem;
   text-align: center;
   color: white;
   text-shadow: 2px 2px 10px black;
 }
 
-p[size="6"] {
+.size6 {
   font-size: 3rem;
   text-align: center;
 }
 
-p[size="5"] {
+.size5 {
   font-size: 2.2rem;
 }
 
@@ -191,11 +191,11 @@ audio {
   cursor: pointer;
 }
 
-.comments p[size="6"] {
+.comments .size6 {
   font-size: 2rem;
 }
 
-.comments p[size="6"]:nth-of-type(2) {
+.comments p[class=".size7"]:nth-of-type(2) {
   margin-bottom: 0;
 }
 
